M: 增加接口代码等

--- a/.babelrc
+++ b/.babelrc
@@ -12,5 +12,12 @@
         ]
       ]
     }
-  }
+  },
+  "plugins": [
+    ["import", {
+      "libraryName": "vant",
+      "libraryDirectory": "es",
+      "style": true
+    }]
+  ]
 }
