--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "nuxt-tv",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,14 +11,21 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
+    "axios": "^0.21.1",
     "core-js": "^3.8.2",
-    "nuxt": "^2.14.12"
+    "nuxt": "^2.14.12",
+    "vant": "^2.12.4"
   },
   "devDependencies": {
+    "@nuxtjs/proxy": "^2.1.0",
     "@vue/test-utils": "^1.1.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
+    "babel-plugin-import": "^1.13.3",
     "jest": "^26.6.3",
+    "less": "^4.1.0",
+    "less-loader": "^7.2.1",
+    "path": "^0.12.7",
     "vue-jest": "^3.0.4"
   }
 }
