--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.8.2",
     "nuxt": "^2.14.12",
+    "postcss-pxtorem": "^5.1.1",
+    "tailwindcss": "^2.0.3",
     "vant": "^2.12.4"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "less": "^4.1.0",
     "less-loader": "^7.2.1",
     "path": "^0.12.7",
+    "sass-loader": "10",
     "vue-jest": "^3.0.4"
   }
 }
