--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "core-js": "^3.8.2",
     "nuxt": "^2.14.12",
     "postcss-pxtorem": "^5.1.1",
-    "vant": "^2.12.4"
+    "v-viewer": "^1.6.3",
+    "vant": "^2.12.4",
+    "vue-gallery-slideshow": "^1.5.2"
   },
   "devDependencies": {
     "@nuxtjs/proxy": "^2.1.0",
