--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@octokit/core": "^3.3.0",
     "axios": "^0.21.1",
     "core-js": "^3.8.2",
+    "lodash": "^4.17.21",
     "nuxt": "^2.14.12",
     "postcss-pxtorem": "^5.1.1",
     "v-viewer": "^1.6.3",
